[gd_scene load_steps=43 format=2]

[ext_resource path="res://scripts/ship.gd" type="Script" id=1]
[ext_resource path="res://resources/shieldshader.tres" type="Shader" id=2]
[ext_resource path="res://assets/Images/white.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/whitehole.png" type="Texture" id=4]
[ext_resource path="res://scripts/shadow.gd" type="Script" id=5]
[ext_resource path="res://resources/shipshader.tres" type="Shader" id=6]
[ext_resource path="res://resources/animated_ship.tres" type="SpriteFrames" id=7]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.1.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.2.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.3.png" type="Texture" id=10]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.4.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.5.png" type="Texture" id=12]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.6.png" type="Texture" id=13]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.7.png" type="Texture" id=14]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.8.png" type="Texture" id=15]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.9.png" type="Texture" id=16]
[ext_resource path="res://assets/Images/explosion/enemy_explosion_big_0.10.png" type="Texture" id=17]
[ext_resource path="res://icon.png" type="Texture" id=18]
[ext_resource path="res://scripts/joystick.gd" type="Script" id=19]
[ext_resource path="res://assets/Sounds/tiny_explosion3.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/Sounds/jet.wav" type="AudioStream" id=21]
[ext_resource path="res://resources/redblueshader.tres" type="Shader" id=22]
[ext_resource path="res://assets/Images/friendlylaser/Layer #1.png" type="Texture" id=23]
[ext_resource path="res://assets/Images/friendlylaser/Layer #2.png" type="Texture" id=24]
[ext_resource path="res://assets/Images/friendlylaser/Layer #3.png" type="Texture" id=25]
[ext_resource path="res://assets/Images/friendlylaser/Layer #4.png" type="Texture" id=26]
[ext_resource path="res://assets/Images/friendlylaser/Layer #5.png" type="Texture" id=27]
[ext_resource path="res://assets/Images/friendlylaser/Layer #6.png" type="Texture" id=28]
[ext_resource path="res://assets/Images/friendlylaser/Layer #7.png" type="Texture" id=29]
[ext_resource path="res://assets/Images/friendlylaser/Layer #8.png" type="Texture" id=30]
[ext_resource path="res://assets/Images/friendlylaser/Layer #9.png" type="Texture" id=31]
[ext_resource path="res://assets/Images/friendlylaser/Layer #10.png" type="Texture" id=32]
[ext_resource path="res://assets/Images/friendlylaser/Layer #11.png" type="Texture" id=33]
[ext_resource path="res://assets/Images/friendlylaser/Layer #12.png" type="Texture" id=34]

[sub_resource type="Animation" id=1]

resource_name = "combo"
length = 0.75
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laser:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.74 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]

resource_name = "laser"
length = 0.45
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laser:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]

resource_name = "explosion"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}

[sub_resource type="ShaderMaterial" id=6]

render_priority = 0
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = ExtResource( 6 )
shader_param/x = true
_sections_unfolded = [ "shader_param" ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="ShaderMaterial" id=7]

render_priority = 0
shader = ExtResource( 22 )
shader_param/x = true
_sections_unfolded = [ "shader_param" ]

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ship" type="Area2D" index="0"]

position = Vector2( 169.788, 343.386 )
rotation = 1.5708
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="get_hits" type="Position2D" parent="." index="0"]

__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/combo = SubResource( 1 )
anims/laser = SubResource( 2 )
blend_times = [  ]

[node name="anim_explosion" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explosion = SubResource( 3 )
blend_times = [  ]

[node name="collision" type="CollisionPolygon2D" parent="." index="3"]

visible = false
position = Vector2( 0.225403, 0 )
build_mode = 0
polygon = PoolVector2Array( 10.1777, 32.6534, 2.76028, -37.6839, -13.0976, -39.048, -27.4208, -9.63426, -24.181, 39.7297 )
__meta__ = {
"_edit_lock_": true
}

[node name="shader" type="Sprite" parent="." index="4"]

editor/display_folded = true
visible = false
material = SubResource( 6 )
position = Vector2( -4.94492, 6.8206 )
rotation = -1.5708
texture = ExtResource( 3 )
_sections_unfolded = [ "Material" ]
__meta__ = {
"_edit_lock_": true
}

[node name="shadow" type="Light2D" parent="shader" index="0"]

position = Vector2( 4.24701, -0.149323 )
scale = Vector2( 0.8, 0.8 )
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 1.47336, 1.98471 )
texture_scale = 4.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 3
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 2
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 2
script = ExtResource( 5 )
_sections_unfolded = [ "Range", "Shadow", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="frames" type="AnimatedSprite" parent="." index="5"]

material = SubResource( 4 )
position = Vector2( -2.79742, 8.92931 )
rotation = -1.5708
scale = Vector2( 0.35, 0.35 )
frames = ExtResource( 7 )
animation = "default"
frame = 2
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="shoot_from" type="Position2D" parent="." index="6"]

position = Vector2( 16.0753, -47.6257 )
__meta__ = {
"_edit_lock_": true
}

[node name="explosion" type="AnimatedSprite" parent="." index="7"]

visible = false
position = Vector2( -7.32651, 2.785 )
scale = Vector2( 0.281573, 0.281573 )
frames = SubResource( 5 )
animation = "default"
frame = 9
_sections_unfolded = [ "Visibility" ]

[node name="shield" type="TouchScreenButton" parent="." index="8"]

visible = false
position = Vector2( -100.089, -186.991 )
scale = Vector2( 2.92899, 3.60948 )
normal = ExtResource( 18 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = false
passby_press = false
action = ""
visibility_mode = 0

[node name="joystick" type="Position2D" parent="." index="9"]

position = Vector2( -7.46399, 135.416 )
scale = Vector2( 1.06935, 1.06935 )
script = ExtResource( 19 )

[node name="right" type="Position2D" parent="joystick" index="0"]

position = Vector2( 1.68619, -55.3027 )

[node name="bullet_hit" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 20 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="sound_ship_engine" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 21 )
volume_db = -25.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="laser" type="AnimatedSprite" parent="." index="12"]

visible = false
material = SubResource( 7 )
position = Vector2( 12.4782, -631.846 )
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 8 )
animation = "default"
frame = 7
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="animation_finished" from="anim_explosion" to="." method="_on_anim_explosion_animation_finished"]

[connection signal="animation_started" from="anim_explosion" to="." method="_on_anim_explosion_animation_started"]


